Colaboratory를 통해 생성됨

--- a/python01.ipynb
+++ b/python01.ipynb
@@ -70,21 +70,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d624cc9-64af-4624-b77a-fa5dc7eb28e6"
+        "outputId": "b8a2f166-0be5-4241-947b-32036fd0e64c"
       },
       "source": [
         "'''\n",
         "데이터분석으로 배우는 인공지능\n",
         "작성자 : 김경민\n",
         "'''\n",
-        "print(\"in☆ id: m._.kyu_\")"
+        "print(\"Hi in☆ id: m._.kyu_\")"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "in☆ id: m._.kyu_\n"
+            "Hi in☆ id: m._.kyu_\n"
           ],
           "name": "stdout"
         }
@@ -104,6 +104,39 @@
         "  + 특수 문자(+, -, *, /, $, @, &, % 등)는 사용할 수 없음\n",
         "  + python 키워드(if, for, while, and, or 등)는 사용할 수 없음\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "r0z9T1ddUjoa",
+        "outputId": "a952f5af-3018-4e13-cb47-d2e6d40c02c3"
+      },
+      "source": [
+        "x = '10'\n",
+        "x"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'10'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
       ]
     },
     {
@@ -138,27 +171,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a8b1f835-b94b-4957-d941-a7282bd59059"
+        "outputId": "cb5a7f8f-9c1e-4439-eae0-28701de27016"
       },
       "source": [
         "x = 10\n",
         "y = 20.5\n",
         "b = True \n",
         "s = 'Hello Python!'\n",
-        "print(type(x))\n",
-        "print(type(y))\n",
-        "print(type(b))\n",
-        "print(type(s))"
+        "\n",
+        "print(x, type(x))\n",
+        "print(y, type(y))\n",
+        "print(b, type(b))\n",
+        "print(s, type(s))"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "<class 'int'>\n",
-            "<class 'float'>\n",
-            "<class 'bool'>\n",
-            "<class 'str'>\n"
+            "10 <class 'int'>\n",
+            "20.5 <class 'float'>\n",
+            "True <class 'bool'>\n",
+            "Hello Python! <class 'str'>\n"
           ],
           "name": "stdout"
         }
@@ -196,13 +230,79 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ckeWLeSwa4KL"
+        "id": "ckeWLeSwa4KL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e46d05d4-3947-424f-e7d7-bfbb959237c9"
       },
       "source": [
-        "x = '10' "
+        "x = '10'\n",
+        "print(x, type(x))\n",
+        "x = int(x)\n",
+        "print(x, type(x)) "
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 <class 'str'>\n",
+            "10 <class 'int'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3yXMAFaVXB5A",
+        "outputId": "6909424b-0183-43da-b6ce-14efa92b34df"
+      },
+      "source": [
+        "x = 10\n",
+        "y = '20'\n",
+        "print(\"x+y=%d\"%(x+int(y)))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x+y=30\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YZuJgvdXXnUf",
+        "outputId": "986a6404-2aef-413b-ff4e-a24ab38f8868"
+      },
+      "source": [
+        "x = 10\n",
+        "y = '20'\n",
+        "print(str(x)+y)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1020\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -234,37 +334,25 @@
       "metadata": {
         "id": "xQJnx1BGOV6s",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1369b9db-6cea-4201-ee9d-329f3e4d25c0"
+        "outputId": "4fe2f0c6-86ea-4f07-9854-a1b7b3d3d956"
       },
       "source": [
-        " input(int())"
+        " x = int(input(\"숫자입력:\"))\n",
+        " y = int(input(\"숫자입력:\"))\n",
+        " print(x+y)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "12\n"
+            "숫자입력:10\n",
+            "숫자입력:20\n",
+            "30\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'12'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
         }
       ]
     },
@@ -297,43 +385,29 @@
       "metadata": {
         "id": "pxD3xR4_7lww",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e97445f9-e55a-4c99-c1d4-3445426485cf"
+        "outputId": "7d134220-cc4f-4242-8255-52f9bceca0c7"
       },
       "source": [
         "#정수 입력\n",
-        "input(int())\n",
+        "a = int(input())\n",
         "\n",
         "#실수 입력\n",
-        "input(float())\n",
-        " "
+        "b = float(input())\n",
+        "\n",
+        "print(\"정수:\",a,\"실수:\",b)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "12\n",
-            "14.5\n"
+            "10\n",
+            "13.32\n",
+            "정수: 10 실수: 13.32\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'14.5'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
         }
       ]
     },
@@ -361,16 +435,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bduh4-6GOOWC"
+        "id": "Bduh4-6GOOWC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "64590acd-a1d6-4c15-b9aa-d3a6c5189d5f"
       },
       "source": [
         "#소수정 처리 \n",
         "x = 3.14159\n",
-        "\n",
-        " "
+        "print(\"x=%f\"%x)\n",
+        "s = f'x={x: .2f}'\n",
+        "print(s)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x=3.141590\n",
+            "x= 3.14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -400,14 +488,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Vlw4Oc-DoNm"
+        "id": "5Vlw4Oc-DoNm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "595fead1-07ca-41c9-ec90-09185088b626"
       },
       "source": [
         "#두 정수를 입력받아서 산술연산\n",
-        " "
+        "x = 10%3\n",
+        "print(x)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -436,26 +537,75 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2UIKX01cNywh"
+        "id": "2UIKX01cNywh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72679e81-efc1-4c4e-d1bd-e4bc1c12e934"
       },
       "source": [
         "# 정수를 입력받아서 짝수/홀수 구분\n",
-        " "
+        "\n",
+        "x = int(input(\"숫자를 입력해 주세요:\"))\n",
+        "if x%2==0:\n",
+        "    print(f\"{x} = 짝수\")\n",
+        "else:\n",
+        "    print(f\"{x} = 홀수\")"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "숫자를 입력해 주세요:20\n",
+            "20 = 짝수\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QpoBs8ucO0hO"
+        "id": "QpoBs8ucO0hO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd37ecdf-fcbb-4875-baac-a13854189b0a"
       },
       "source": [
         "# 성적을 입력받아서 70이상이면 Pass, 70점미만 60점이상 재수강, 60점미만 Fail\n",
-        " "
+        "# 1) if .... else    2) if ... elif ... else \n",
+        "a = int(input(\"점수를 입력해 주세요:\"))\n",
+        "#1)\n",
+        "'''\n",
+        "if a>=70:\n",
+        "    print(\"Pass\")\n",
+        "elif a>=60:\n",
+        "    print(\"재수강\")\n",
+        "else:\n",
+        "    print(\"Fail\")\n",
+        "'''\n",
+        "#2)\n",
+        "if a>=70:\n",
+        "    print(a,\"점\",\"Pass\")\n",
+        "else:\n",
+        "    if a>=60:\n",
+        "        print(a,\"점\",\"재수강\")\n",
+        "    else:\n",
+        "        print(a,\"점\",\"Fail\")"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "점수를 입력해 주세요:100\n",
+            "100 점 Pass\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -501,26 +651,67 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SCXuAE5YWfCh"
+        "id": "SCXuAE5YWfCh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "252ae6c5-0361-4d4b-b8d6-0e6ca4e5f9bf"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
-        "# for문으로 "
+        "# for문으로 \n",
+        "for n in range(1,51):\n",
+        "    if n%3==0 and n%4==0:\n",
+        "        print(n)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12\n",
+            "24\n",
+            "36\n",
+            "48\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2OVQU8sn7Ybb"
+        "id": "2OVQU8sn7Ybb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c374d37b-666e-4a7f-b127-d7d3ece0e7fe"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
-        "# while문으로 \n"
+        "# while문으로 \n",
+        "n = int(input())\n",
+        "while n < 10:\n",
+        "    print(f'n={n}')\n",
+        "    n+=1"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "n=3\n",
+            "n=4\n",
+            "n=5\n",
+            "n=6\n",
+            "n=7\n",
+            "n=8\n",
+            "n=9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -542,13 +733,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_TkcBBQCUPBz"
+        "id": "_TkcBBQCUPBz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39c4cb0a-5dae-4bed-d95f-071623e1d0ac"
       },
       "source": [
-        " "
+        "def f(n):\n",
+        "    if n<=1:\n",
+        "        return n\n",
+        "    else:\n",
+        "        return(f(n-1)+f(n-2))\n",
+        "for i in range(1,17):\n",
+        "    print(f(i))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n",
+            "55\n",
+            "89\n",
+            "144\n",
+            "233\n",
+            "377\n",
+            "610\n",
+            "987\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -571,13 +795,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SKr-npERGvSN"
+        "id": "SKr-npERGvSN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0612b6a1-1578-4baa-9987-123fb7a21a99"
       },
       "source": [
-        " "
+        "s = int(input(\"밑변\"))\n",
+        "c = int(input(\"높이\"))\n",
+        "print(\"삼각형의 면적=\",s*c*0.5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "밑변5\n",
+            "높이6\n",
+            "삼각형의 면적= 15.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
