Colaboratory를 통해 생성됨

--- a/python01.ipynb
+++ b/python01.ipynb
@@ -748,7 +748,7 @@
         "for i in range(1,17):\n",
         "    print(f(i))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +806,7 @@
         "c = int(input(\"높이\"))\n",
         "print(\"삼각형의 면적=\",s*c*0.5)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,6 +833,35 @@
         "---\n",
         "정수형으로 입력되는 밑변과 높이를 공백을 기준으로 한 줄로 입력받는다면?\n",
         "* 예) 20 10"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nzuQMP8XN6uR",
+        "outputId": "9e3d81c8-6def-4ac5-f9bb-9dad6ecaf4a6"
+      },
+      "source": [
+        "s, c = input().split()\n",
+        "'''\n",
+        "s = int(s)\n",
+        "c = int(c)\n",
+        "'''\n",
+        "print(\"삼각형의 면적=\",int(s)*int(c)*0.5)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 6\n",
+            "삼각형의 면적= 15.0\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
