Colaboratory를 통해 생성됨

--- a/python01.ipynb
+++ b/python01.ipynb
@@ -655,24 +655,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "252ae6c5-0361-4d4b-b8d6-0e6ca4e5f9bf"
+        "outputId": "232266a2-2dae-499a-c0e1-7f586fce4315"
       },
       "source": [
-        "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
+        "# 1에서 n까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
         "# for문으로 \n",
-        "for n in range(1,51):\n",
-        "    if n%3==0 and n%4==0:\n",
-        "        print(n)"
+        "n = int(input())\n",
+        "for i in range(1,n+1):\n",
+        "    if i%3==0 and i%4==0:\n",
+        "        print(i, end=' ')"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "12\n",
-            "24\n",
-            "36\n",
-            "48\n"
+            "50\n",
+            "12 24 36 48 "
           ],
           "name": "stdout"
         }
@@ -737,38 +736,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39c4cb0a-5dae-4bed-d95f-071623e1d0ac"
+        "outputId": "17221cfb-d9cc-4f55-9f10-80399f86eecd"
       },
       "source": [
-        "def f(n):\n",
-        "    if n<=1:\n",
-        "        return n\n",
-        "    else:\n",
-        "        return(f(n-1)+f(n-2))\n",
-        "for i in range(1,17):\n",
-        "    print(f(i))"
+        "n = int(input())\n",
+        "a, b = 0, 1\n",
+        "while a < n :\n",
+        "    print(a, end=' ')\n",
+        "    a, b = b, a+b "
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "5\n",
-            "8\n",
-            "13\n",
-            "21\n",
-            "34\n",
-            "55\n",
-            "89\n",
-            "144\n",
-            "233\n",
-            "377\n",
-            "610\n",
-            "987\n"
+            "1000\n",
+            "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 "
           ],
           "name": "stdout"
         }
