Colaboratory를 통해 생성됨

--- a/python01.ipynb
+++ b/python01.ipynb
@@ -782,14 +782,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0612b6a1-1578-4baa-9987-123fb7a21a99"
+        "outputId": "477f0f1b-894e-4a9c-ca41-3c73bc925ee0"
       },
       "source": [
         "s = int(input(\"밑변\"))\n",
-        "c = int(input(\"높이\"))\n",
-        "print(\"삼각형의 면적=\",s*c*0.5)"
+        "h = int(input(\"높이\"))\n",
+        "print(\"삼각형의 면적=\",s*h*0.5)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -825,17 +825,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nzuQMP8XN6uR",
-        "outputId": "9e3d81c8-6def-4ac5-f9bb-9dad6ecaf4a6"
+        "outputId": "0b50f2e4-1cca-428e-dc58-2f29f5da2a25"
       },
       "source": [
-        "s, c = input().split()\n",
+        "s, h = input().split()\n",
         "'''\n",
         "s = int(s)\n",
-        "c = int(c)\n",
+        "h = int(c)\n",
         "'''\n",
-        "print(\"삼각형의 면적=\",int(s)*int(c)*0.5)"
+        "print(\"삼각형의 면적=\",int(s)*int(h)*0.5)"
       ],
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
